--- a/hope-ui-react-dashboard-main/package.json
+++ b/hope-ui-react-dashboard-main/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/bootstrap": "^5.9.0",
@@ -75,6 +76,7 @@
     "react-select": "^5.2.2",
     "react-shepherd": "^4.0.0",
     "react-signature-pad-wrapper": "^3.1.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.1",
     "react-sortablejs": "^6.0.0",
