--- a/hope-ui-react-dashboard-main/package.json
+++ b/hope-ui-react-dashboard-main/package.json
@@ -43,6 +43,7 @@
     "install": "^0.13.0",
     "javascript-time-ago": "^2.5.9",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
