--- a/hope-ui-react-dashboard-main/package.json
+++ b/hope-ui-react-dashboard-main/package.json
@@ -22,6 +22,7 @@
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/react": "^5.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^5.15.10",
     "@mui/styles": "^5.15.10",
     "@nextui-org/react": "^2.2.9",
@@ -44,6 +45,7 @@
     "javascript-time-ago": "^2.5.9",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
+    "ldrs": "^1.0.2",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
@@ -67,6 +69,7 @@
     "react-flatpickr": "^3.10.11",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.0",
+    "react-lottie": "^1.2.4",
     "react-masonry-css": "^1.0.16",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.0",
